samples/_failures_safe/1761424006_5546cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6eb1e53f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6eb1e53f.c:162:12: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  162 |     return token
      |            ^~~~~
      |            Token
./samples/SAFE/__tmp_6eb1e53f.c:162:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6eb1e53f.c:162:17: error: expected ‘;’ at end of input
  162 |     return token
      |                 ^
      |                 ;
./samples/SAFE/__tmp_6eb1e53f.c:162:5: error: expected declaration or statement at end of input
  162 |     return token
      |     ^~~~~~
